// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AirportArrivalTimelineEvent type should have valid fields 1`] = `
Object {
  "location": Object {
    "args": Array [],
    "description": "Location of departure",
    "isDeprecated": false,
    "name": "location",
    "resolve": [Function],
    "type": "RouteStop",
  },
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`ArrivalTimelineEvent type should have valid fields 1`] = `
Object {
  "location": Object {
    "args": Array [],
    "description": "Location of arrival",
    "isDeprecated": false,
    "name": "location",
    "resolve": [Function],
    "type": "RouteStop",
  },
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`BoardingTimelineEvent type should have valid fields 1`] = `
Object {
  "terminal": Object {
    "args": Array [],
    "description": "Terminal at which boarding is done",
    "isDeprecated": false,
    "name": "terminal",
    "type": "String",
  },
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`BookedFlightTimelineEvent type should have valid fields 1`] = `
Object {
  "location": Object {
    "args": Array [],
    "description": "Location of arrival",
    "isDeprecated": false,
    "name": "location",
    "resolve": [Function],
    "type": "RouteStop",
  },
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`BookingConfirmedTimelineEvent type should have valid fields 1`] = `
Object {
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`DepartureTimelineEvent type should have valid fields 1`] = `
Object {
  "airline": Object {
    "args": Array [],
    "description": "Airline for the flight",
    "isDeprecated": false,
    "name": "airline",
    "resolve": [Function],
    "type": "Airline",
  },
  "duration": Object {
    "args": Array [],
    "description": "Flight duration in minutes.",
    "isDeprecated": false,
    "name": "duration",
    "type": "Int",
  },
  "flightNumber": Object {
    "args": Array [],
    "description": "Flight number",
    "isDeprecated": false,
    "name": "flightNumber",
    "type": "Int",
  },
  "location": Object {
    "args": Array [],
    "description": "Location of arrival",
    "isDeprecated": false,
    "name": "location",
    "resolve": [Function],
    "type": "RouteStop",
  },
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`DownloadBoardingPassTimelineEvent type should have valid fields 1`] = `
Object {
  "leg": Object {
    "args": Array [],
    "description": "Leg corresponding to the boarding pass",
    "isDeprecated": false,
    "name": "leg",
    "type": "Leg",
  },
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`DownloadETicketTimelineEvent type should have valid fields 1`] = `
Object {
  "ticketUrl": Object {
    "args": Array [],
    "description": "URL of the eTicket",
    "isDeprecated": false,
    "name": "ticketUrl",
    "type": "String",
  },
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`DownloadInvoiceTimelineEvent type should have valid fields 1`] = `
Object {
  "invoiceUrl": Object {
    "args": Array [],
    "description": "URL of the invoice",
    "isDeprecated": false,
    "name": "invoiceUrl",
    "type": "String",
  },
  "legs": Object {
    "args": Array [],
    "description": "Legs of the booking",
    "isDeprecated": false,
    "name": "legs",
    "type": "[Leg]",
  },
  "numberPassengers": Object {
    "args": Array [],
    "description": "Number of passengers",
    "isDeprecated": false,
    "name": "numberPassengers",
    "type": "Int",
  },
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`LeaveForAirportTimelineEvent type should have valid fields 1`] = `
Object {
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`PaymentConfirmedTimelineEvent type should have valid fields 1`] = `
Object {
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;

exports[`TransportFromAirportTimelineEvent type should have valid fields 1`] = `
Object {
  "timestamp": Object {
    "args": Array [],
    "description": "Time of appearance in the timeline.",
    "isDeprecated": false,
    "name": "timestamp",
    "type": "DateTime",
  },
}
`;
